[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/Warior.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.1
height = 0.3

[sub_resource type="CapsuleMesh" id=2]
radius = 0.1
mid_height = 0.3

[node name="Warior" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="DmgTimer" type="Timer" parent="."]

[node name="PathfindingTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="DmgTimer" to="." method="_on_DmgTimer_timeout"]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_PathfindingTimer_timeout"]
